# prontus

./: .gitignore  COMPILING.md  Cargo.toml  LICENSE  README.md  extract.py
.github/workflows/: build.yml  rust.yml  test.yml
crates/: Cargo.toml
crates/client/: Cargo.toml
crates/client-macros/: Cargo.toml
crates/client-macros/src/: lib.rs
crates/client/src/: api_error.rs  bubble.rs  bubble_history.rs  bubble_info.rs  bubble_list.rs  client.rs  custom_json.rs  lib.rs  message_create.rs  message_delete.rs  message_edit.rs  pusher_auth.rs  reaction_add.rs  reaction_remove.rs  serde_datetime.rs  user_info.rs  user_login.rs  user_token_login.rs  user_verify.rs
crates/client/src/client/: announcement.rs  auth.rs  bubble.rs  message.rs  reaction.rs  task.rs  user.rs
crates/client/src/models/: announcement.rs  bubble.rs  bubble_stats.rs  bubble_stats_info.rs  category.rs  member.rs  membership.rs  membership_info.rs  message.rs  mod.rs  organization.rs  property.rs  task.rs  task_info.rs  user_info.rs
crates/client/src/routes/: announcement_create.rs  announcement_list.rs  announcement_mark_read.rs  bubble_create.rs  bubble_delete.rs  bubble_history.rs  bubble_info.rs  bubble_list.rs  bubble_mark.rs  bubble_membership_search.rs  bubble_update.rs  counts.rs  device_ping.rs  dm_create.rs  files.rs  membership_update.rs  message_create.rs  message_delete.rs  message_edit.rs  message_search.rs  mod.rs  pusher_auth.rs  reaction_add.rs  reaction_remove.rs  task_complete.rs  task_create.rs  task_list.rs  task_uncomplete.rs  task_update.rs  user_info.rs  user_login.rs  user_search.rs  user_token_login.rs  user_update.rs  user_verify.rs
crates/client_macros/: Cargo.toml
crates/client_macros/src/: lib.rs
crates/comrak-0.28.0/: Cargo.toml
crates/comrak-0.28.0/src/: nodes.rs
crates/comrak-0.28.0/src/parser/: math.rs  multiline_block_quote.rs
crates/encrypt/: Cargo.toml
crates/encrypt-internal/: Cargo.toml
crates/encrypt-internal/src/: lib.rs
crates/encrypt/src/: lib.rs  retrieval.rs
crates/extension/: Cargo.toml  build.rs
crates/extension-api/: Cargo.toml  build.rs
crates/extension-api/src/: lib.rs
crates/extension-api/wit/since_v0.1.0/: extension.wit
crates/extension-cli/: Cargo.toml
crates/extension-cli/src/: main.rs  wasm_compile.rs
crates/extension-manager/: Cargo.toml
crates/extension-manager/src/: lib.rs
crates/extension/src/: info.rs  lib.rs  wasm_host.rs
crates/extension/src/wasm_host/: wit.rs
crates/extension/src/wasm_host/wit/: since_v0_1_0.rs
crates/probot/: Cargo.toml  README.md
crates/probot/src/: handler.rs  lib.rs
crates/pusher/: Cargo.toml
crates/pusher/examples/: sandbox.rs
crates/pusher/src/: lib.rs  message.rs
crates/richtext/: Cargo.toml
crates/richtext/src/: lib.rs
crates/scripting/: Cargo.toml
crates/scripting/src/: lib.rs
crates/search/: Cargo.toml
crates/search/examples/: example.rs
crates/search/src/: index.rs  lib.rs  message_index.rs
crates/settings/: Cargo.toml  build.rs
crates/settings/src/: lib.rs  settings_file_v0.rs  settings_file_v1.rs
crates/ui-handlers/: Cargo.toml
crates/ui-handlers/src/: auth.rs  channel.rs  handlers.rs  lib.rs  message.rs  user.rs
crates/ui-lib/: Cargo.toml
crates/ui-lib/src/: error.rs  state.rs
crates/ui-macros/: Cargo.toml
crates/ui-macros/src/: lib.rs
crates/ui_handlers/: Cargo.toml
crates/ui_handlers/src/: channel.rs  handlers.rs  lib.rs  message.rs  settings.rs  user.rs
crates/ui_lib/: Cargo.toml
crates/ui_lib/src/: lib.rs
crates/ui_macros/: Cargo.toml
crates/ui_macros/src/: lib.rs
crates/updater/: Cargo.toml
crates/updater/src/: lib.rs
crates/version/: Cargo.toml
crates/version/src/: lib.rs
crates/wit-gen/: Cargo.toml
crates/wit-gen/src/: language.rs  lib.rs
extensions/example_task/: Cargo.toml  example_task.wasm  prontus_ext.toml
extensions/example_task/src/: lib.rs
lib/scipher/: cfp_common.py  cfp_common_v1.py  check_grammar.py  decode.py  encode.py  encode_lib.c  encode_lib.h  encode_lib.pyx  genbodies.py  genconfnames.py  requirements.txt  scipherd.py
lib/scipher/versions/v000/: cfp_common_v0.py
src/: client.rs  image_service.rs  main.rs  net_worker.rs  secret.rs  settings.rs  storage.rs  util.rs  websocket_worker.rs
src/client/: bubble.rs  bubble_history.rs  bubble_info.rs  bubble_list.rs  device_ping.rs  message_create.rs  message_delete.rs  message_edit.rs  pusher_auth.rs  reaction_add.rs  reaction_remove.rs  user_info.rs  user_login.rs  user_token_login.rs  user_verify.rs
src/websocket/: mod.rs
ui/: appwindow.slint  embed.slint  message.slint  package-lock.json  package.json  reaction.slint  settings.slint  sidebar.slint  svelte.config.js  tailwind.config.js  tsconfig.json  vite.config.js
ui/dialog/: channel.slint  settings.slint  user.slint
ui/src/: app.css  app.html  hooks.client.js  hooks.server.js
ui/src-tauri/: Cargo.toml  tauri.conf.json
ui/src-tauri/capabilities/: default.json
ui/src-tauri/icons/: icon.icns
ui/src-tauri/src/: error.rs  lib.rs  main.rs  proxy_thread.rs  pusher_thread.rs  state.rs  tray.rs
ui/src-tauri/src/handler/: auth.rs  message.rs  mod.rs  settings.rs
ui/src-tauri/src/task/: extension.rs  mod.rs  proxy.rs  proxy_thread.rs  pusher.rs  pusher_thread.rs  search.rs  search_thread.rs
ui/src/lib/: api.js  api.ts  helpers.ts  popup.js  remark-mentions.js  remark-mentions.ts
ui/src/lib/prosemirror-mentions/: index.js  mentionPlugin.js  nodes.js  utils.js
ui/src/routes/: +page.svelte  ActionButton.svelte  ChannelCard.svelte  CloseButton.svelte  CurrentChannelCard.svelte  InteractiveProfilePicture.svelte  Landing.svelte  Main.svelte  MemberList.svelte  Message.svelte  MessageList.svelte  MessagePlaceholder.svelte  NoCategorySidebar.svelte  ProfilePicture.svelte  Settings.svelte  SideCategory.svelte  SideItem.svelte  Sidebar.svelte  UserCard.svelte  UserInfo.svelte  UserList.svelte  api.js  auth_code.svelte  auth_email.svelte  embed.svelte  main.svelte  message.svelte  popup.js  reaction.svelte  settings.svelte  sidecategory.svelte  sideitem.svelte  usercard.svelte
(+54 files in other folders)
