[package]
name = "prontus"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
reqwest = { version = "0.12", features = ["blocking", "cookies", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
slint = "1.5"
uuid = { version = "1.8", features = ["v4"] }

[build-dependencies]
slint-build = "1.5"