[package]
name = "prontus"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22"
chrono = "0.4"
futures = "0.3"
futures-util = "0.3"
home = "0.5"
image = { version = "0.25", features = ["jpeg", "gif", "png", "webp", "ico", "avif"] }
open = "5.1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.21"
thiserror = "1.0"
reqwest = { version = "0.12", features = ["blocking", "cookies", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
slint = "1.5"
url = "2.5"
uuid = { version = "1.8", features = ["v4"] }

[build-dependencies]
slint-build = "1.5"