[package]
name = "prontus"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22"
chrono = "0.4"
futures = "0.3"
futures-util = "0.3"
home = "0.5"
image = { version = "0.25", features = ["default-formats", "rayon"] }
inquire = "0.7"
log = "0.4"
log4rs = "1.3"
notify-rust = "4.11"
open = "5.3"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.23", features = ["native-tls"] }
thiserror = "1.0"
rayon = "1.10"
reqwest = { version = "0.12", features = ["blocking", "cookies", "json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
slint = { version = "1.6", features = ["default", "log"] }
url = "2.5"
uuid = { version = "1.10", features = ["v4"] }

[build-dependencies]
slint-build = "1.6"

[profile.release]
debug = 1
