[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
client_macros = { path = "../client_macros" }
log = "0.4"
reqwest = { version = "0.12", features = ["brotli", "cookies", "http2", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.9"
thiserror = "1.0"
url = "2.5"
uuid = { version = "1.10", features = ["v4"] }

[dev-dependencies]
settings = { path = "../settings" }
simple_logger = "5.0"
tokio = { version = "1.0", features = ["full"] }