[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
client_macros = { path = "../client_macros" }
log = "0.4"
reqwest = { workspace = true, features = ["brotli", "cookies", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { workspace = true }
serde_path_to_error = "0.1"
serde_with = "3.11"
thiserror = "1.0"
url = "2.5"
uuid = { version = "1.11", features = ["v4"] }

[dev-dependencies]
settings = { path = "../settings" }
simple_logger = "5.0"
tokio = { version = "1", features = ["full"] }