[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
client_macros = { path = "../client-macros" }
log = { workspace = true }
reqwest = { workspace = true, features = ["brotli", "cookies", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { workspace = true }
serde_path_to_error = "0.1"
serde_with = "3.11"
thiserror = { workspace = true }
url = "2.5"
uuid = { version = "1.11", features = ["v4"] }

[dev-dependencies]
settings = { path = "../settings" }
simple_logger = "5.0"
tokio = { workspace = true }
