[package]
name = "encrypt_internal"
version = "0.1.0"
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[dependencies]
crypto_box = { version = "0.9.1", features = ["chacha20", "std"] }
keyring = { version = "3.6.1", features = ["apple-native", "windows-native", "linux-native"] }
