[package]
name = "encrypt"
version = "0.1.0"
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }


[dependencies]
base64 = "0.22"
blake3 = "1.5.5"
encrypt_internal = { path = "../encrypt-internal" }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true }
thiserror = { workspace = true }
