[package]
name = "extension-api"
# this is the version of the extension api crate
version = "0.1.0"
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
wit-bindgen = { workspace = true }

[package.metadata.component]
target = { path = "wit" }