[package]
name = "extension-cli"
version = "0.1.0"
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[dependencies]
async-compression = { workspace = true }
anyhow = { workspace = true }
cargo_toml = "0.21"
color-eyre = "0.6"
clap = { version = "4.5", features = ["derive", "string"] }
extension = { path = "../extension" }
inquire = "0.7"
reqwest = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9.34"
simple_logger = "5.0"
tar = { workspace = true }
toml = { workspace = true }
tokio = { workspace = true }
wasmparser = { workspace = true }
wasm-encoder = { workspace = true }
wit-component = { workspace = true }
