[package]
name = "extension-manager"
version = "0.1.0"
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[dependencies]
extension = { path = "../extension" }
rand = { workspace = true, features = [] }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
settings = { path = "../settings" }
thiserror = { workspace = true }
