[package]
name = "extension"
version = "0.1.0"
edition = "2021"

[dependencies]
client = { path = "../client" }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
settings = { path = "../settings" }
thiserror = { workspace = true }
reqwest = { workspace = true }
toml = "0.8"
wasmtime = "26"
wasmtime-wasi = "26"
wit-bindgen = { workspace = true }
futures = "0.3.31"
