[package]
name = "extension"
version = "0.1.0"
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[dependencies]
anyhow = { workspace = true }
client = { path = "../client" }
futures = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
settings = { path = "../settings" }
thiserror = { workspace = true }
reqwest = { workspace = true }
toml = { workspace = true }
wasmtime = { workspace = true }
wasmtime-wasi = { workspace = true }
