[package]
name = "pusher"
version = "0.1.0"
edition = "2021"

[dependencies]
client = { path = "../client" }
futures-channel = "0.3.30"
futures-util = "0.3.30"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = { workspace = true }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }

[[example]]
name = "recv"
path = "examples/recv.rs"
