[package]
name = "pusher"
version = "0.1.0"
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[dependencies]
client = { path = "../client" }
futures-channel = "0.3.30"
futures-util = "0.3.30"
log = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }

[[example]]
name = "recv"
path = "examples/recv.rs"
