[package]
name = "scripting"
version = "0.1.0"
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[dependencies]
boa_engine = { workspace = true }
boa_runtime = { workspace = true }
client = { path = "../client" }
futures-util = { version = "0.3" }
tokio = { workspace = true }
