[package]
name = "search"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
client = { path = "../client" }
settings = { path = "../settings" }
heed = "0.20"
milli = { git = "https://github.com/meilisearch/meilisearch", tag = "v1.10.2" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
dashmap = { version = "6.1.0", features = ["serde"] }
log = "0.4"

[[example]]
name = "example"
path = "examples/example.rs"
