[package]
name = "search"
version = "0.1.0"
edition = "2021"

[dependencies]
client = { path = "../client" }
settings = { path = "../settings" }
heed = "0.21"
milli = { git = "https://github.com/meilisearch/meilisearch", tag = "v1.12.0" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { workspace = true }
futures = "0.3"
dashmap = { version = "6.1.0", features = ["serde"] }
log = "0.4"
sysinfo = "0.33"
bincode = "1.3.3"
thiserror = "2"

[[example]]
name = "example"
path = "examples/example.rs"
