[package]
name = "search"
version = "0.1.0"
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[dependencies]
bincode = "1.3.3"
client = { path = "../client" }
dashmap = { version = "6.1.0", features = ["serde"] }
futures = "0.3"
milli = { git = "https://github.com/meilisearch/meilisearch", tag = "v1.12.8" }
serde = { version = "1", features = ["derive"] }
serde_json = { workspace = true }
settings = { path = "../settings" }
tokio = { workspace = true }
log = "0.4"
sysinfo = "0.33"
thiserror = "2"

[[example]]
name = "example"
path = "examples/example.rs"
