[package]
name = "settings"
version = "0.1.0"
edition = "2021"

[dependencies]
home = "0.5"
log = { version = "0.4", features = [] }
serde = { version = "1.0", features = ["derive"] }
simd-json = { version = "0" }
thiserror = { workspace = true }
tokio = { version = "1", features = ["fs", "io-std", "io-util"] }
wit-bindgen = "0.35"

[build-dependencies]
tokio = { version = "1", features = ["full"] }
wit-gen = { path = "../wit-gen" }
