[package]
name = "settings"
version = "0.1.0"
edition = "2021"

[dependencies]
home = "0.5"
log = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
simd-json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }

[build-dependencies]
tokio = { workspace = true }
