[package]
name = "settings"
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
version = { workspace = true }

[dependencies]
log = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
simd-json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }

[build-dependencies]
tokio = { workspace = true }
