[package]
name = "ui-handlers"
version = "0.1.0"
edition = "2021"

[dependencies]
client = { path = "../client" }
futures = "0.3"
log = "0.4"
search = { path = "../search" }
settings = { path = "../settings" }
tauri = { version = "2.1", features = ["tray-icon", "unstable"] }
ui-lib = { path = "../ui-lib" }
updater = { path = "../updater" }
version = { path = "../version" }
