[package]
name = "ui-handlers"
version = "0.1.0"
edition = "2021"

[dependencies]
client = { path = "../client" }
futures = { workspace = true }
log = { workspace = true }
search = { path = "../search" }
settings = { path = "../settings" }
tauri = { workspace = true }
ui-lib = { path = "../ui-lib" }
updater = { path = "../updater" }
version = { path = "../version" }
