[package]
name = "ui-handlers"
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
version = { workspace = true }

[dependencies]
client = { path = "../client" }
dashmap = { workspace = true }
futures = { workspace = true }
log = { workspace = true }
search = { path = "../search" }
settings = { path = "../settings" }
tauri = { workspace = true }
ui-lib = { path = "../ui-lib" }
updater = { path = "../updater" }
version = { path = "../version" }
