[package]
name = "ui-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
client = { path = "../client" }
dashmap = { workspace = true }
settings = { path = "../settings" }
tauri = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
updater = { path = "../updater" }
