[package]
name = "ui-lib"
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
version = { workspace = true }

[dependencies]
client = { path = "../client" }
dashmap = { workspace = true }
settings = { path = "../settings" }
tauri = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
updater = { path = "../updater" }
