[package]
name = "updater"
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
version = { workspace = true }

[dependencies]
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
self-replace = "1.5"
tokio = { workspace = true }
thiserror = { workspace = true }
version = { path = "../version" }
