[package]
name = "ui"
version = "0.1.0"
description = "Prontus"
authors = ["Ashwin Naren <arihant2math@gmail.com>"]
edition = "2021"

[lib]
name = "ui_core"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
chrono = "0.4"
client = { path = "../../crates/client" }
extension = { path = "../../crates/extension" }
futures = "0.3"
http = "1.1"
log = "0.4"
log4rs = "1.3"
notify-rust = "4"
pusher = { path = "../../crates/pusher" }
reqwest = "0.12"
search = { path = "../../crates/search" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.1", features = ["tray-icon", "unstable"] }
tauri-plugin-shell = "2.0"
thiserror = { version = "2" }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
settings = { path = "../../crates/settings" }
sentry = "0.34"
hyper = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
tauri-plugin-dialog = "2.0"
ui-handlers = { path = "../../crates/ui-handlers" }
ui-lib = { path = "../../crates/ui-lib" }
