[package]
name = "ui"
version = "0.1.0"
description = "Prontus"
authors = ["Ashwin Naren <arihant2math@gmail.com>"]
edition = "2024"

[lib]
name = "ui_core"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
anyhow = "1.0"
chrono = "0.4"
client = { path = "../../crates/client" }
color-eyre = "0.6"
extension = { path = "../../crates/extension" }
futures = "0.3"
log = "0.4"
log4rs = "1.3"
notify-rust = "4"
pusher = { path = "../../crates/pusher" }
reqwest = "0.12"
search = { path = "../../crates/search" }
tauri = { version = "2.3", features = ["tray-icon", "unstable"] }
tauri-plugin-shell = "2.2"
thiserror = { version = "2" }
tokio = { version = "1", features = ["full"] }
serde = "1.0"
serde_json = "1.0"
settings = { path = "../../crates/settings" }
sentry = "0.36"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
tauri-plugin-dialog = "2.0"
ui-handlers = { path = "../../crates/ui-handlers" }
ui-lib = { path = "../../crates/ui-lib" }
